[project]
name = "amigurume-api"
version = "0.1.0"
description = ""
authors = [
    {name = "mbower00",email = "mitchbbower@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "flask-jwt-extended (>=4.7.1,<5.0.0)"
]

# This code is copied from Google AI
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
